# sketchybar-py

./: .gitignore  README.md  pyproject.toml
src/sketchybar_py/: __init__.py  sbar.py
src/sketchybar_py/core/: __init__.py  constants.py  sbar_types.py  utils.py
