[project]
name = "sketchybar-py"
version = "0.2.1"
description = "A tiny lib for Sketchybar configuring with Python"
readme = "README.md"
authors = [{ name = "Dmitry Kuznetsov", email = "dk@lemd.cc" }]
requires-python = ">=3.10"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/Dimentium/sketchybar-py"
"Bug Tracker" = "https://github.com/Dimentium/sketchybar-py/issues"
"Repository" = "https://github.com/Dimentium/sketchybar-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
