[project]
name = "sketchybar-py"
dynamic = ["version"]
description = "A tiny lib for Sketchybar configuring with Python"
readme = "README.md"
authors = [{ name = "Dmitry Kuznetsov", email = "dk@lemd.cc" }]
requires-python = ">=3.10"
dependencies = ["pydantic~=2.10.6"]

[project.urls]
"Repository" = "https://github.com/Dimentium/sketchybar-py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "./src/sketchybar_py/__about__.py"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
